--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -1,3 +1,132 @@
+.carousel-root {
+    width: 64% !important;
+    margin: auto !important;
+    margin-top: 1% !important;
+    margin-bottom: 2.5% !important;
+  }
+  
+  .carousel .slide {
+    background: #fff !important;
+    color: black;
+    height: 100%;
+  }
+  
+  .carousel .slide img {
+    width: 139px !important;
+    border-radius: 50%;
+    border: 2px solid rgba(0,0,0,0.4) !important;
+}
+  
+  .myCarousel {
+    background: #fafafa;
+    margin-top: -6%;
+    width: 54%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 6%;
+    padding-bottom: 8%;
+    padding-left: 5%;
+    padding-right: 5%;
+    border: 1px solid #ddd;
+    height: 286px;
+  }
+  
+  .carousel .control-dots {
+    padding-left: 5px !important;
+    outline: 0;
+    bottom: 0% !important;
+  }
+  
+  .myCarousel h3 {
+    color: #222;
+    font-weight: 100;
+    letter-spacing: 0.2px;
+    margin-bottom: 4px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 17px;
+  }
+  
+  .myCarousel h4 {
+    text-transform: uppercase;
+    margin-top: 0;
+    padding-top: 0;
+    font-weight: 500;
+    color: #787878;
+    font-size: 14px;
+  }
+  
+  .myCarousel p {
+    font-weight: 100 !important;
+    line-height: 29px !important;
+    color: #222;
+    font-size: 15px;
+    font-family: sans-serif;
+    max-height: 67px;
+  }
+  
+  .myCarousel p:before {
+    content: "“";
+    color: #aaa;
+    font-size: 26px;
+    font-family: monospace;
+    font-weight: 100;
+  }
+  
+  .myCarousel p:after {
+    content: "”";
+    color: #aaa;
+    font-size: 26px;
+    font-family: monospace;
+    font-weight: 100;
+    line-height: 0;
+  }
+  
+  .carousel .control-dots .dot {
+    box-shadow: none !important;
+    background: #454545 !important;
+    outline: 0;
+  }
+  
+  .carousel.carousel-slider .control-arrow {
+    background: #000 !important;
+    height: 50px !important;
+    position: absolute;
+    top: 35% !important;
+  }
+  
+  @media only screen and (max-width: 934px) {
+    .carousel-root {
+      outline: 0;
+      width: 93% !important;
+      margin: auto !important;
+      margin-bottom: 2.5% !important;
+    }
+  
+    .carousel.carousel-slider .control-arrow {
+      display: none !important;
+    }
+    .myCarousel {
+      background: #fafafa;
+      margin-top: -9%;
+      width: 88%;
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: 8%;
+      padding-bottom: 12.5%;
+      padding-left: 5%;
+      padding-right: 5%;
+      border: 1px solid #ddd;
+      height: 269px;
+    }
+  
+    .carousel .slide img {
+      width: 24% !important;
+      border-radius: 50%;
+      border: 2px solid rgba(0,0,0,0.4) !important;
+    }
+  }
+
 .portfolio-page {
     padding-left: 100px;
     padding-right: 50px;
@@ -46,8 +175,20 @@
             );
             bottom: -70px;
         }
-
         .title {
+            margin-bottom: 0;
+            border-radius: 3px;
+            padding: 0.5em;
+            margin-top: 0;
+            color: #fff;
+            font-size: 24px;
+            background-color: rgba(0,0,0,0.8) !important;
+            font-weight: 500;
+            line-height: 24px;
+        }
+        .titleSmall {
+            font-size: 1.5rem !important;
+            background-color: rgba(0,0,0,0.8) !important;
             margin-bottom: 0;
             border-radius: 3px;
             padding: 0.5em;
@@ -57,17 +198,37 @@
             font-weight: 500;
             line-height: 24px;
         }
-
+        .titleXS {
+            font-size: 1.3rem !important;
+            background-color: rgba(0,0,0,0.8) !important;
+            margin-bottom: 0;
+            border-radius: 3px;
+            padding: 0.5em;
+            margin-top: 0;
+            color: #fff;
+            font-size: 24px;
+            font-weight: 500;
+            line-height: 24px;
+        }
+        .pageBold {
+            font-size: 2rem !important;
+            font-weight: 700 !important;
+            font-style: oblique;
+        }
         .description {
             font-size: 14px;
             margin-bottom: 5px;
             color: #fff;
             font-weight: 300;
+            background-color:rgba(0, 0, 0, .6);
+            border-radius: 0.5rem;
+            padding: 0.8rem;
+            margin-top: .8rem !important;
         }
 
         .btn {
-            margin-top: 30px;
-            margin-bottom: 10px;
+            margin-top: 15px;
+            margin-bottom: 5px;
             padding: 0 23px;
             height: 40px;
             line-height: 34px;
@@ -112,6 +273,13 @@
         }
     }
 }
+h2.testimonials {
+    font: 300 18px/2 "Helvetica Neue", sans-serif !important;
+    color: #fff;
+    font-size: 2.5rem;
+    text-align: center;  
+    margin: .4rem 0;    
+}
 
 @media screen and (max-width: 1200px) {
     .container.portfolio-page {
@@ -132,12 +300,24 @@
 }
 
 @media screen and (max-width: 821px) {
+    .portfolio-page .image-box .titleSmall {
+        font-size: 1.4rem !important;
+        background-color: rgba(0, 0, 0, .8);
+        font-weight: 700 !important;
+    }
     p.title {
         font-size: 16px !important;
     }
     h4.description {
         margin-top: 0 !important;
         font-size: 12px !important;
+    }
+    h2.testimonials {
+        font: 300 18px/2 "Helvetica Neue", sans-serif !important;
+        color: #fff;
+        font-size: 2.5rem;
+        text-align: center;
+        margin: .4rem 0;   
     }
 }
 
@@ -151,6 +331,7 @@
             margin-left: 20px;
             margin-top: 20px;
         }
+        
 
         .image-box {
             height: 350px;
@@ -162,3 +343,4 @@
         }
     }
 }
+
