--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -83,6 +83,11 @@
                 content: 'ABOUT';
             }
         }
+        a.certifications-link {
+            &:after {
+                content: 'CERTS';
+            }
+        }
         a.portfolio-link {
             &:after {
                 content: 'MY WORK';
